# hello-backend

./: .dockerignore  .npmrc  CMakeLists.txt  LICENSE  README.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.out.json
.husky/: pre-commit
app/: amqp.test.ts  amqp.ts  authenticate.basic.ts  authenticate.fido2.ts  authenticate.jwt.test.ts  authenticate.jwt.ts  authenticate.token.ts  authenticate.ts  authorize.example.ts  authorize.test.ts  authorize.ts  blob.test.ts  blob.ts  config.GET.feature  config.test.ts  config.ts  dapr.GET.feature  dapr.spec.ts  dapr.test.ts  dapr.ts  dataset.test.ts  dataset.ts  db.spec.ts  db.test.ts  db.ts  domain.feature  domain.mock.ts  domain.test.ts  domain.ts  echo.spec.feature  echo.spec.ts  echo.ts  environment.test.ts  environment.ts  error.ts  event.POST.feature  event.spec.POST.feature  event.spec.ts  event.test.ts  event.ts  (+49 more)
app/apphub/: controller.ts  openapi.test.ts  openapi.ts  openapi.yml
app/authenticate/: basic.ts  fido2.ts
app/db/: dataset.test.ts  mongo.mock.ts  mongo.test.ts  mongo.ts  sequelize.test.ts  sequelize.ts  shadow.down.test.ts  shadow.down.ts  shadow.ts  shadow.up.ts
app/iam/: authenticate.ts  authorize.test.ts  token.ts  webauthn.html  webauthn.ts
app/inference/: controller.ts  openapi.ts  openapi.yml
app/notification/: websocket.test.ts  websocket.ts
app/system/: event.test.ts  event.ts  health.GET.feature  health.test.ts  health.ts  metric.test.ts  metric.ts  time.test.ts  time.ts  version.GET.feature  version.test.ts  version.ts
app/tag/: model.test.ts  model.ts
cnf/: secret.json
cnf/caddy/: Caddyfile  dockerfile
cnf/dapr/: bindings.yml  config.yml  pubsub.yml  secret.json  secret.schema.json  secret.yml  statestore.yml
cnf/nginx/: nginx.conf.template
cnf/verdaccio/: config.yaml
ctx/: README.md  c4.aggregate.puml  c4.component.puml  c4.sequence.puml  usecase.add-brand.feature
ctx/advantech/: license.test.ts  license.ts  systeminfo.test.ts  systeminfo.ts
ctx/apphub/: openapi.mock.ts  openapi.test.ts  openapi.ts  openapi.yml
ctx/engine/: openapi.mock.ts  openapi.test.ts  openapi.ts  openapi.yml
ctx/license/: openapi.mock.ts  openapi.spec.ts  openapi.test.ts  openapi.ts  openapi.yml
ctx/tag/: controller.spec.GET.feature  controller.spec.ts  controller.test.ts  controller.ts  model.spec.ts  model.ts  openapi.yml  service.spec.ts  service.ts
ctx/user/: authenticate.basic.ts  authenticate.ts  controller.ts
lib/: CMakeLists.txt  addon-debug.js  addon.cpp  addon.test.ts  addon.ts  apk.test.ts  apk.ts  authorization.example.ts  authorization.test.ts  authorization.ts  axios.example.ts  axios.mock.ts  axios.spec.ts  axios.test.ts  axios.ts  cron.example.ts  cucumber.feature  cucumber.spec.feature  cucumber.spec.ts  cucumber.test.ts  cucumber.ts  dapr.mock.ts  dapr.spec.ts  dapr.test.ts  dapr.ts  dataset.test.ts  dataset.ts  dhcp.example.ts  dhcp.ts  dynlib.spec.ts  dynlib.ts  email.example.ts  email.ts  error.test.ts  error.ts  event.spec.ts  event.test.ts  event.ts  express.application.spec.ts  express.application.test.ts  (+42 more)
lib/wasm/: asconfig.json  main.ts
web/: video.html
