cmake_minimum_required(VERSION 3.16)
project(backend)
set(CMAKE_MSVC_RUNTIME_LIBRARY "${CMAKE_MSVC_RUNTIME_LIBRARY}DLL")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -W3 -DDEBUG")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -W3 -DDEBUG")
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 14)
add_definitions(-DUNICODE -D_UNICODE)
add_definitions(-DNAPI_VERSION=3)
add_subdirectory("lib")
# way to import external project
#add_subdirectory("../outside" proj-name)